# pygraphsearch

./: .gitignore  Node.py  README.md  pyproject.toml  requirements.txt  search.py  setup.py
.github/workflows/: pusblish-to-pypi.yml
example/: Board.py  Move.py  main.py
pygraphsearch/: AStarFrontier.py  Algorithm.py  BreadthFirstFrontier.py  DepthFirstFrontier.py  DijkstraFrontier.py  Edge.py  IterativeDeepeningFrontier.py  Node.py  State.py  __init__.py  algorithm.py  edge.py  frontier.py  node.py  path.py  search.py  state.py
pygraphsearch/frontiers/: a_star_frontier.py  breadth_first_frontier.py  depth_first_frontier.py  dijkstra_frontier.py  iterative_deepening_frontier.py
src/pygraphsearch/: AStarFrontier.py  Algorithm.py  BreadthFirstFrontier.py  DepthFirstFrontier.py  DijkstraFrontier.py  Edge.py  Frontier.py  Heap.py  IterativeDeepeningFrontier.py  Node.py  Path.py  Stack.py  State.py  TypeVars.py  __init__.py  search.py
src/pygraphsearch/test/: SimpleNode.py  test_a_star.py  test_dijkstra.py
src/pygraphsearch/test/slidingpuzzle/: __init__.py
tests/: SimpleNode.py  test_a_star.py  test_dijkstra.py
tests/slidingpuzzle/: Board.py
